[package]
name = "sx127x_lora"
version = "0.3.1"
authors = ["Charles Wade <charles.wade@rockets.utoledo.edu>"]
repository = "https://github.com/mr-glt/sx127x_lora"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "lora", "sx1276", "radio"]
description = "A platform-agnostic driver for Semtech SX1276/77/78/79 based boards."

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"
bit_field = "0.10"
maybe-async = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.4"

[features]
version_0x09 = []
default = []
sync = ["maybe-async/is_sync"]

[[example]]
name = "pi_simple_send"
required-features = ["sync"]
